dataclients/kubernetes/testdata/ingressV1/ingress-data/application-label.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkout
  namespace: default
  labels:
    app.kubernetes.io/name: checkout
spec:
  rules:
  - host: checkout.example.org
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: checkout
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: default
spec:
  clusterIP: 10.3.190.97
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    application: checkout
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: checkout
  namespace: default
subsets:
- addresses:
  - ip: 10.2.9.103
  ports:
  - port: 8080
    protocol: TCP
